--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,31 @@ endif ()
 add_definitions(-DTBB_PREVIEW_FLOW_GRAPH_FEATURES=1)
 add_definitions(-DTBB_PREVIEW_FLOW_GRAPH_NODES=1)
 
+# conan workspace and cmake don't work that well together, did not manage to get the build dir into the includes: 
+# force generated file into source include dir 
+# only one export file could be generated
+# use files and defines instead
+#set(CMAKE_CXX_VISIBILITY_PRESET hidden)
+#set(CMAKE_VISIBILITY_INLINES_HIDDEN 1)
+#generate_export_header(${CONAN_PACKAGE_NAME} EXPORT_FILE_NAME "../../include/traact/${CONAN_PACKAGE_NAME}_export.h")
+
+if(UNIX)
+    if(APPLE)
+        MESSAGE(STATUS "Building for Macos.")
+        add_definitions(-DTRAACT_TARGET_APPLE=1)
+    endif()
+    MESSAGE(STATUS "Building for Unix.")
+    add_definitions(-DTRAACT_TARGET_UNIX=1)
+elseif(WIN32)
+    MESSAGE(STATUS "Building for Windows.")
+    add_definitions(-DTRAACT_TARGET_WINDOWS=1)
+endif()
+
+if (MSVC)
+    # per default disable extended aligned storage for now on msvc
+    add_definitions(-D_DISABLE_EXTENDED_ALIGNED_STORAGE -DHAVE_SNPRINTF)
+endif()
+
 add_link_options( -fno-gnu-unique )
 
 add_library(${CONAN_PACKAGE_NAME} SHARED
@@ -66,8 +91,6 @@ ENDIF (NOT WIN32)
 install(TARGETS ${CONAN_PACKAGE_NAME}
         LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
         PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
-
-
 
 
 if (WITH_TESTS)
